# brain-reconfigurations-PNAS-2025

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
.ipynb_checkpoints/: README-checkpoint.md
data/AllenMouseConnectome/: Template_rotated_Allen.nii
data/DREADDs/: GC_DMN_A24_CNO_Wt8648_Baseline.npy  GC_DMN_A24_CNO_Wt8650_CNO.npy  GC_DMN_A24_CNO_Wt8652_Baseline.npy  GC_DMN_A24_CNO_Wt8653_Baseline.npy  GC_DMN_A24_CNO_Wt8656_Baseline.npy  GC_DMN_A24_CNO_Wt8656_CNO.npy  GC_DMN_A24_CNO_Wt8658_Baseline.npy  GC_DMN_A24_CNO_Wt8658_CNO.npy  GC_DMN_A29c_CNO_Wt8637_Baseline.npy  GC_DMN_A29c_CNO_Wt8638_CNO.npy  GC_DMN_A29c_CNO_Wt8639_CNO.npy  GC_DMN_A29c_CNO_Wt8640_CNO.npy  GC_DMN_A29c_CNO_Wt8642_Baseline.npy  GC_DMN_A29c_CNO_Wt8642_CNO.npy  GC_DMN_A29c_CNO_Wt8647_Baseline.npy  GC_DMN_A30_CNO_Wt8934_CNO.npy  GC_DMN_A30_CNO_Wt8936_Baseline.npy  GC_DMN_A30_CNO_Wt8938_CNO.npy  GC_DMN_A30_CNO_Wt8943_CNO.npy  GC_DMN_A30_control_CNO_Wt8918_Baseline.npy  GC_DMN_A30_control_CNO_Wt8919_CNO.npy  GC_DMN_A30_control_CNO_Wt8925_CNO.npy  GC_DMN_A30_control_CNO_Wt8926_CNO.npy  GM_DMN_A24_CNO_Wt8648_Baseline.npy  GM_DMN_A24_CNO_Wt8648_CNO.npy  GM_DMN_A24_CNO_Wt8650_Baseline.npy  GM_DMN_A24_CNO_Wt8652_Baseline.npy  GM_DMN_A24_CNO_Wt8652_CNO.npy  GM_DMN_A24_CNO_Wt8653_Baseline.npy  GM_DMN_A24_CNO_Wt8656_Baseline.npy  GM_DMN_A24_CNO_Wt8656_CNO.npy  (+48 more)
notebooks/: Figure-1.ipynb  Figure-2.ipynb  Figure-3.ipynb  Figure-4.ipynb
scripts/: Allen_Connectome_Network.py  Allen_Connectome_metadata.py  F1_functions.py  F3_functions.py  Mouse_dataset_metadata.py  dGC_metrics.py
(+184 files in other folders)
